minor changes - updated css of navbar, module li ul and books li ul - fixed faq scrollbar issue - minor change in head caption

--- a/src/css/book.css
+++ b/src/css/book.css
@@ -21,14 +21,14 @@
   background-color: #0052d9;
 }
 
-ul {
+.bookul {
   list-style: none;
   padding-left: 0;
   margin-bottom: 10px;
   padding: 0.5rem;
 }
 
-li {
+.bookli {
   margin-bottom: 5px;
   padding: 0.5rem;
   margin-left: 20px;
